fix pointer stretch

--- a/qsbodypain/src/App.css
+++ b/qsbodypain/src/App.css
@@ -62,10 +62,11 @@
 }
 
 svg {
-    flex: 1 1 auto;
+    /* flex: 1 1 auto;
     width: 100%;
     max-height: 100%;
-    height: auto;
+    height: 100%; */
+    aspect-ratio: 1;
 }
 
 .path-selected {
